[package]
name = "frostgate-prover"
version = "0.1.0"
edition = "2024"

[dependencies]
sp1-zkvm = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
frostgate-sdk = { path = "../frostgate-sdk" }
uuid = { workspace = true }