[package]
name = "frostgate-prover"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
frostgate-sdk = { path = "../frostgate-sdk" }
uuid = { workspace = true }
bincode.workspace = true
tracing = "0.1.41"
sp1-prover = "4.2.1"
sp1-sdk = { version = "4.2.1", features = ["network"] }
sp1-core-machine = "4.2.1"
tokio.workspace = true
async-trait.workspace = true
sha3 = "0.10.8"
num_cpus = "1.16.0"
hex.workspace = true
